--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "liveServer.settings.port": 5501,
-  "liveServer.settings.host": "localhost"
+  "liveServer.settings.host": "localhost",
+  "prettier.enable": false
 }
